manifests/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: nginx
  externalIPs:
    - 172.20.5.101
    - 172.20.5.102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: gitlab.mn.sipam.gov.br:5050/teste/registry/nginx:v1
        ports:
        - containerPort: 80
          protocol: TCP
      imagePullSecrets:
      - name: gitlab-pull-secret
